Commit take